# The-Pulse-of-Sydney-Project-Documentation

./: .env.example  .gitignore  CONTRIBUTING.md  DATASET_REGISTRY.yaml  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
data/fixtures/: README.md  transport_sample.csv
data/interim/: abs  abs_sa2_attributes.csv  abs_sa2_geometries.csv  commute_clean.csv  housing  transport  weather  weather_clean.csv
data/processed/: commute_features.csv  sa2_geometries.csv  schi.csv  weather_features.csv
data/raw/: abs.csv  housing  housing.csv  transport  transport.csv  weather  weather.csv
src/: __init__.py  config.py  utils_io.py
src/cleaning/: clean_abs.py  clean_housing.py  clean_transport.py  clean_weather.py  utils.py
src/etl/: fetch_abs.py  fetch_housing.py  fetch_transport.py  fetch_weather.py
src/features/: __init__.py  composite_index.py  engineer_commute_features.py  engineer_weather_features.py  make_geometries.py
src/pulse/: __init__.py  etl.py  features.py  schi.py
src/viz/: __init__.py  maps.py  scatterplots.py  timeseries.py
tests/: test_cleaning.py  test_config_module.py  test_etl.py  test_features.py  test_index.py  test_schi.py  test_utils_io.py
tests/fixtures/: pipeline.py
