[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
exclude = ["data", "notebooks", "report"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
